--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Recital - Hospital das Clinicas</a></div>
-										<div class="block-date">Recife, 3 de Maio de 2016 </div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Paço do Frevo</a></div>
+										<div class="block-date">Recife, 21 de Maio de 2016 às 16h</div>
 									</div>
 									<div class="right"></div>
 								</div>
@@ -210,8 +210,8 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Recital - Escola de Artes João Pernambuco</a></div>
-										<div class="block-date">Recife, 17 de Maio de 2016</div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Sala Concris, Teatro da UFPE</a></div>
+										<div class="block-date">Recife, 24 de Maio de 2016 às 15h</div>
 									</div>
 									<div class="right"></div>
 								</div>
@@ -220,8 +220,8 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Instituto dos Cegos</a></div>
-										<div class="block-date">Recife, 31 de Maio de 2016</div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Espaço Cultural Escola Sesc</a></div>
+										<div class="block-date">Rio de Janeiro, 3 de Junho de 2016 às 19h30</div>
 									</div>
 									<div class="right"></div>
 								</div>
@@ -270,7 +270,7 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Espace Claretière Fontanil</a></div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Eglise Saint-Merri</a></div>
 										<div class="block-date">Paris, 1 de Julho de 2016</div>
 									</div>
 									<div class="right"></div>
