--- a/portfolio-povo-brasileiro.html
+++ b/portfolio-povo-brasileiro.html
@@ -211,13 +211,13 @@
 								<div id="datas" class="name">Datas</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
-									<i> - BRASIL 2016 - </i>
+									<!--<i> - BRASIL 2016 - </i>
 									<p>
 									<b>Recife</b><br>
 									03/05 - Hospital das Clínicas - 14h<br>
 									17/05 - Escola João Pernambuco (Miniauditório) - 15h<br>
 									31/05 - Instituto dos Cegos - 15h<br>
-									</p>
+									</p>-->
 
 									<i> - FRANÇA 2016 - </i>
 									<p>
@@ -247,107 +247,6 @@
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-								<div id="programa" class="name">Programa</div>
-								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
-								<div class="portfolio-text">
-									<p>
-										<div class="dashed">ABERTURA</div>
-
-										<div class="music-title">A Dor de Uma Saudade (Frevo de Bloco)</div>
-										<div class="music-info">Edgar Moraes (1904-1973) / Arr. Vocal Duda – Arr. Instrumental Edson Pedro da Silva<br>
-										Solo: Isaac Pedro</div>
-										<div class="music-quote">“Cantar com expressão de uma emoção que nasce da alma e vem dizer ao coração que a vida é uma canção”</div>
-
-										<div class="music-title">Bom Dia</div>
-										<div class="music-info">Gilberto Gil (1942) / Arr. Vocal Pedro Veneziani (1979) – Arr. Instrumental Edson Pedro</div>
-										<div class="music-quote">“Acorda, meu amor, é hora de trabalhar, o dia já raiou”.</div>
-
-
-										<div class="dashed">I - CANTOS DO NORDESTE ARMORIAL - SERTÃO</div>
-
-										<div class="music-title">Aboio</div>
-										<div class="music-info">Cussy de Almeida (1936-2010) / Arr. Edson Pedro</div>
-										<div class="music-quote">Canto entoado pelos vaqueiros quando conduzem o gado. “Não se distinguem palavras na canção do boiadeiro; nem ele as articula, pois fala do seu gado, com essa linguagem do coração que enternece os animais e os cativa”. (José de Alencar)</div>
-
-										<div class="music-title">Ave Maria Sertaneja</div>
-										<div class="music-info">Júlio Ricardo e O. de Oliveira (1922-1993) / Arr. M. Bezerra</div>
-										<div class="music-quote">“Quando batem as seis horas, de joelhos sobre o chão, o sertanejo reza a sua oração”.</div>
-
-										<div class="music-title">Súplica Cearense</div>
-										<div class="music-info">Luiz Gonzaga (1912-1989) / Arr. Dierson Torres</div>
-										<div class="music-quote">“Oh! Deus, perdoe este pobre coitado, que de joelhos rezou um bocado, pedindo pra chuva cair sem parar”.</div>
-
-										<div class="music-title">Mulungú Fuloriô</div>
-										<div class="music-info">Antonio Vaz (1935-2005)</div>
-										<div class="music-quote">“Mulungu, quem te enfeitou? Foi o vento? Foi a chuva? Foi o sangue do nosso Senhor? Quem te fez avermelhar? O danado do amor foi quem te fez florescer. Ah! O danado do amor...”</div>
-
-
-										<div class="music-title">Concerto De Pife</div>
-										<div class="music-info">Edson Pedro (1983)</div>
-										<div class="music-quote">“Um instrumento simples, sem sofisticações. Uma sonoridade comum aos ouvidos do povo nordestino. Assim é o pífano”.</div>
-
-										<div class="dashed">II - CANTOS DAS PRAIAS DO NORDESTE</div>
-
-										<div class="music-title">Ponto De Iemanjá</div>
-										<div class="music-info">Domínio Público<br>
-										Solo: Sue</div>
-										<div class="music-quote">“Mãe d’água, rainha das ondas, sereia do mar. Mãe d’água, seu canto é bonito quando tem luar”.</div>
-
-										<div class="music-title">Yemanjá Ôtô</div>
-										<div class="music-info">Kilza Setti (1932)</div>
-										<div class="music-quote">“ Iemanjá é a rainha das águas salgadas, a majestade dos mares, senhora dos oceanos, sereia sagrada”.</div>
-
-										<div class="music-title">Prece Ao Vento</div>
-										<div class="music-info">Dorival Caymmi (1914-2008) / Arr. Vocal Ângelo Dias – Arr. Instrumental Edson Pedro<br>
-										Lúcia Helena Cysneiros (escaleta)</div>
-										<div class="music-quote">“Vento que balança as palhas do coqueiro, que encrespa as ondas do mar, que assanha os cabelos da morena... Vento que na beira lá da praia escutava o meu amor a cantar... Hoje estou sozinho e tu também... Triste me lembrando do meu bem...”</div>
-
-										<div class="music-title">Dançando Com Lia</div>
-										<div class="music-info">Lúcia Helena Cysneiros (1957)<br>
-										Solo: Fábia Sobral</div>
-										<div class="music-quote">“Eu fui dançar com Lia na ilha de Itamaracá, molhar os pés, pisar na areia, entrar na roda e cirandar”.</div>
-
-										<div class="music-title">Rosa (Coco)</div>
-										<div class="music-info">Domínio Público / Arr. Lúcia Helena Cysneiros</div>
-										<div class="music-quote">“Oi, Rosa, que saudade... Que saudade meu bem”.</div>
-
-										<div class="music-title">Mourão</div>
-										<div class="music-info">C. Guerra-Peixe (1914-1993) e C. Pereira (1932) / Arr. Carlos Silva</div>
-
-										<div class="dashed">III - CANTOS AFRO BRASILEIROS</div>
-
-										<div class="music-title">Suíte Afro Brasileira</div>
-										<div class="music-info">Arr. Instrumental Lúcia Helena Cysneiros</div>
-										<div class="music-quote">“No meu lamento cantei um maracatu”.</div>
-										<ul class="music-list">
-											<li>Mateus Embaixador - Antonio Nóbrega (1952) / Arr. Vocal André Protásio</li>
-											<li>Banzo Maracatu - Dimas Sedícias (1930-2001)</li>
-											<li>To the Mothers in Brazil - Lars Jansson (1951) / Arr. Vocal Gunnar Eriksson</li>
-											<li>Nas Água Verde do Mar - Toada de Maracatu do Recife / Arr. Vocal: Ernst Mahle (1929)<br>
-										  Solo: Eudes Naziazeno</li>
-											<li>Estrela é Lua Nova - Heitor Villa-Lobos (1887-1959)<br>
-										  Solo: Surama Ramos</li>
-											<li>Ofulu Lorêrê - Canto de Candomblé / Arr. Camargo Guarnieri (1907-1993)<br>
-										  Solo: Eudes Naziazeno</li>
-											<li>Que Baque é esse? - Lenine (1959) / Arr. Vocal André Protásio</li>
-											<li>Viva o Nosso Rei na Corte - Toada de Maracatu do Recife / Arr. Vocal Ernst Mahle (1929)</li>
-										</ul>
-
-										<div class="music-title">Caboclos De Orubá</div>
-										<div class="music-info">Dimas Sedícias (1930-2001) e Clovis Pereira (1932)</div>
-										<div class="music-quote">“Um dos bailados mais antigos existente no Brasil, foi registrado pela primeira vez em tribos indígenas do Nordeste, no ano de 1584, pelo padre jesuíta Fernão Cardim. Atualmente são grupos fantasiados de índios que, ao som de pequenas flautas, saem pelas ruas das cidades no período do carnaval”.</div>
-
-										<div class="dashed">IV – CARNAVAL EM RECIFE</div>
-
-										<div class="music-quote">“Pernambuco frevando para o mundo”.</div>
-
-										<div class="music-title">Cocada</div>
-										<div class="music-info">Lourival Oliveira (1918-2000) / Arr. Dierson Torres</div>
-										<div class="music-title">Vassourinhas (Frevo de Rua)</div>
-										<div class="music-info">M. da Rocha (1864-?) e J. Batista (1878-1952) / Arr. Edson Pedro</div>
-									</p>
-									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
-								</div>
 
 								<div id="agradecimentos" class="name">Agradecimentos</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
