Retirando data do joão pernambuco que será adiada

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<div class="small">próximas apresentações</div>
 						</div>
 						<ul class="blocks-holder">
-							<li class="block">
+							<!--<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
 										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Povo Brasileiro: Cantos do Nordeste</a></div>
@@ -206,7 +206,7 @@
 									<div class="right"></div>
 								</div>
 								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
+							</li>-->
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
