--- a/portfolio-povo-brasileiro.html
+++ b/portfolio-povo-brasileiro.html
@@ -236,7 +236,7 @@
 									<i> - BRASIL 2016 - </i>
 									<p>
 									<b>Recife</b><br>
-									02/08 - Escola João Pernambuco - 15h<br>
+									<!--02/08 - Escola João Pernambuco - 15h<br>-->
 									09/08 - Associação Pernambucana de Cegos (APEC)<br>
 									14/08 - Teatro Santa Isabel<br>
 									16/08 - Hospital das Clínicas<br>
