Atualizando git com versão atual do site

--- a/portfolio-povo-brasileiro.html
+++ b/portfolio-povo-brasileiro.html
@@ -178,8 +178,8 @@
 
 							<div class="portfolio-sidebar">
 								<ul>
-									<li><a href="#projeto">O Projeto</a></li>
-									<li><a href="#datas">Datas</a></li>
+									<li><a href="#projeto">O Espetáculo</a></li>
+									<!--<li><a href="#datas">Datas</a></li>-->
 									<li><a href="#grupos">Os Grupos</a></li>
 									<li><a href="#agradecimentos">Agradecimentos</a></li>
 									<li><a href="#ficha-tecnica">Ficha Técnica</a></li>
@@ -189,13 +189,13 @@
 
 							<!-- portfolio-content -->
 							<div class="portfolio-content">
-								<div id="projeto" class="name">O Projeto</div>
+								<div id="projeto" class="name">O Espetáculo</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
 								<div class="portfolio-text">
 									<!--<p>O FUNCULTURA apresenta <br>
 										Contracantos & Contraventos em <br>
 										POVO BRASILEIRO: CANTOS DO NORDESTE</p>-->
-									<p>Contracantos e Contraventos apresentam o espetáculo Povo Brasileiro: Cantos do Nordeste para o público brasileiro e francês. A concepção do espetáculo, baseada em pesquisa e elaboração de repertório coral, procurou levantar peças musicais influenciadas pelas três grandes matrizes formadoras da cultura brasileira: a africana, a indígena e a europeia.
+									<!--<p>Contracantos e Contraventos apresentam o espetáculo Povo Brasileiro: Cantos do Nordeste para o público brasileiro e francês. A concepção do espetáculo, baseada em pesquisa e elaboração de repertório coral, procurou levantar peças musicais influenciadas pelas três grandes matrizes formadoras da cultura brasileira: a africana, a indígena e a europeia.
 									</p>
 									<p>Pernambuco, estado do Nordeste do Brasil, é um dos maiores celeiros de manifestações culturais de tradição oral. Do maracatu ao frevo, passando pelo bumba-meu-boi, caboclinhos, ciranda, cordel, coco, e pelos ideais de Ariano Suassuna – criador do movimento armorial -, retiramos os versos, as cores, as melodias, os ritmos e as harmonias para compartilhar um pouco de nossa cultura.
 									</p>
@@ -205,11 +205,45 @@
 									</p>
 									<p>O espetáculo Povo Brasileiro: Cantos do Nordeste está sendo realizado graças ao patrocínio da FUNDARPE (Fundação do Patrimônio Histórico e Artístico de Pernambuco), órgão da Secretaria Estadual de Cultura que tem como objetivo principal a promoção e a preservação das identidades e produções culturais de Pernambuco. Através do edital FUNCULTURA são premiados anualmente projetos de excelência artística que são montados e apresentados no Brasil e no exterior.
 									</p>
+									-->
+									<p>POVO BRASILEIRO: CANTOS DO NORDESTE é um
+									concerto musical com elementos teatrais que apresenta a cultura
+									brasileira através de um repertório com peças nordestinas
+									valorizando as diferentes matrizes da formação de nosso povo. O
+									concerto incorpora música vocal e instrumental, aliada a
+									elementos da poesia de cordel, gestos sonoros e ritmos
+									pernambucanos. O programa é baseado em obras musicais de
+									tradição oral: aboios, toadas de maracatu, cirandas, coco,
+									caboclinho e frevo, entre outros.</p>
+
+									<p>O espetáculo é dividido em quatro momentos: O Nordeste
+									Armorial, Cantos da Praia, Cantos Afro-brasileiros e o Carnaval
+									pernambucano. POVO BRASILEIRO: CANTOS DO
+									NORDESTE esboça um retrato do Brasil, utilizando elementos da
+									cultura religiosa popular a elementos dos brincantes nordestinos.
+									A preparação do espetáculo busca a utilização do corpo de
+									forma integral, realizando uma pesquisa de gestos sonoros
+									(palmas, estalos de dedos, batidas de pés, sons guturais, entre
+									outros) e procurando aliar movimentos corporais, recursos cênicos
+									e danças às peças musicais. A fusão dessas linguagens com a
+									riqueza rítmica nordestina resulta em um concerto dinâmico e
+									diferenciado.</p>
+									
+									<p>Em 2016 o grupo vocal CONTRACANTOS foi premiado no Edital FUNCULTURA da FUNDARPE e realizou, 
+									com o patrocínio do Governo do Estado de Pernambuco, uma turnê pelas cidades de Grenoble, Lyon e Paris, na França. 
+									Buscando divulgar a cultura brasileira, em especial a do nordeste do país, preparou para o público francês o 
+									espetáculo POVO BRASILEIRO: CANTOS DO NORDESTE. O concerto foi apresentado também
+									no SESC Escola do Rio de Janeiro, na VIII Mostra Leão do Norte
+									do SESC/PE (Garanhuns), nas comemorações dos 70 anos da
+									UFPE no Teatro de Santa Isabel (Recife), na série Música no
+									Hermilo no Teatro Hermilo Borba Filho (Recife) e no VIII Festival Internacional de Música de Campina Grande (FIMUS).</p>
+
+
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
 								</div>
 
-								<div id="datas" class="name">Datas</div>
-								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
+								<!--<div id="datas" class="name">Datas</div>
+								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>
 								<div class="portfolio-text">
 									<!--<i> - BRASIL 2016 - </i>
 									<p>
@@ -217,7 +251,7 @@
 									03/05 - Hospital das Clínicas - 14h<br>
 									17/05 - Escola João Pernambuco (Miniauditório) - 15h<br>
 									31/05 - Instituto dos Cegos - 15h<br>
-									</p>-->
+									</p>
 
 									<i> - FRANÇA 2016 - </i>
 									<p>
@@ -236,13 +270,13 @@
 									<i> - BRASIL 2016 - </i>
 									<p>
 									<b>Recife</b><br>
-									<!--02/08 - Escola João Pernambuco - 15h<br>-->
+									<!--02/08 - Escola João Pernambuco - 15h<br>-- >
 									09/08 - Associação Pernambucana de Cegos (APEC)<br>
 									14/08 - Teatro Santa Isabel<br>
 									16/08 - Hospital das Clínicas<br>
 									</p>
 									<a href="#projeto" class="link-topo"><div> </div>Topo</a>
-								</div>
+								</div>-->
 
 								<div id="grupos" class="name">Os Grupos</div>
 								<!--<div class="sub-name custom">UT LAOREET DOLORE LOREMP ISOMPSU LDOS </div>-->
