--- a/index.html
+++ b/index.html
@@ -208,64 +208,14 @@
 								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
 							</li>-->
 							<li class="block">
-								<div class="block-ribbon">
+								<div class="block-ribbon" style="top: 91px;">
 									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Nazaré da Mata (03/10/2016 às 18h)<br>Catedral N. S. da Conceição</div>
+										<div class="block-title"><a href="http://janeirodegrandesespetaculos.com/2018/" target="_blank">Povo Brasileiro: Cantos do Nordeste</a></div>
+										<div class="block-date">Recife (24/01/2018 às 20h)<br>Teatro de Santa Isabel</div>
 									</div>
 									<div class="right"></div>
 								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
-							<li class="block">
-								<div class="block-ribbon">
-									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Paudalho (04/10/2016 às 18:30)<br>Igreja Matriz</div>
-									</div>
-									<div class="right"></div>
-								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
-							<li class="block">
-								<div class="block-ribbon">
-									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Arcoverde (16/10/2016 às 17h)<br>Igreja Matriz</div>
-									</div>
-									<div class="right"></div>
-								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
-							<li class="block">
-								<div class="block-ribbon">
-									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Recife (18/10/2016 às 19h)<br>Igreja de N. Sra. do Carmo</div>
-									</div>
-									<div class="right"></div>
-								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
-							<li class="block">
-								<div class="block-ribbon">
-									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Caruaru (23/10/2016 às 17h)<br>Paróquia São José</div>
-									</div>
-									<div class="right"></div>
-								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
-							<li class="block">
-								<div class="block-ribbon">
-									<div class="left">
-										<div class="block-title"><a href="#">Um Réquiem Nordestino</a></div>
-										<div class="block-date">Gravatá (31/10/2016 às 18:30)<br>Igreja Matriz</div>
-									</div>
-									<div class="right"></div>
-								</div>
-								<a href="about.html" ><img src="img/dummies/home_agenda_requiem2.jpeg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+								<a href="http://janeirodegrandesespetaculos.com/2018/" target="_blank"><img src="img/dummies/home-jge2018.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
 							</li>
 							<!-- <li class="block">
 								<div class="block-ribbon">
