Adicionando portfolio do cantos do trabalho, ajustes no povo brasileiro e adicionando douglas e release de john

--- a/about.html
+++ b/about.html
@@ -111,6 +111,7 @@
 						<li><a href="#">PORTFOLIO</a>
 							<ul>
 								<li><a href="portfolio-povo-brasileiro.html">POVO BRASILEIRO: CANTOS DO NORDESTE</a></li>
+								<li><a href="portfolio-cantos-trabalho.html">CANTOS DE TRABALHO</a></li>
 								<!--<li><a href="about-styled.html">STYLED</a></li>
 								<li><a href="about-more.html">MORE</a></li>
 								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
