--- a/staff.html
+++ b/staff.html
@@ -114,6 +114,7 @@
 						<li><a href="#">PORTFOLIO</a>
 							<ul>
 								<li><a href="portfolio-povo-brasileiro.html">POVO BRASILEIRO: CANTOS DO NORDESTE</a></li>
+								<li><a href="portfolio-cantos-trabalho.html">CANTOS DE TRABALHO</a></li>
 								<!--<li><a href="about-styled.html">STYLED</a></li>
 								<li><a href="about-more.html">MORE</a></li>
 								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
@@ -229,6 +230,18 @@
 												<p>	Natural de Recife, Pernambuco. Estudou Flauta transversal no Centro Profissionalizante de Criatividade Musical do Recife e no Conservatório Pernambucano de Música, com os professores Rogério Acioli e George Albert.  É formada em Bacharelado em Música Sacra pelo Seminário Batista do Norte do Brasil. Fez parte do grupo de performance corporal TAMBACAC e do Côro OPUS2, sob orientação dos professores Maria Aida Barroso e Flávio Medeiros, respectivamente. Como flautista, participa dos grupos Dell’Armonia Antiqüa e Sonoro Ofício, grupos de música antiga, dirigidos por Gaston Gerônimo (Uruguai) e Sérgio Dias, respectivamente. Teve aulas com Rosângela Lima, Ricardo Kanji e Lawrence Pottier. Como cantora, participa do grupo Contracantos, sob orientação do professor Flávio Medeiros, e do Ópera Stúdio UFPE, sob direção de Adriano Pinheiro. Apresentou-se no festival de Ópera de Oaxaca/México em 2015, e participou da turnê nacional 2014 do musical O nosso Villa, da companhia Ária Social.  É pós-graduada em Musicoterapia pela FACHO, sob orientação de Carmem Vasconcelos. Atualmente é aluna do curso de licenciatura em música pela UFPE.
 
 												</p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<img src="img/douglas.jpg" alt="Pic" />
+										<div class="information">
+											<div class="header">
+												<div class="name">Douglas Araújo</div>
+												<div class="contact">Barítono</div>
+											</div>
+											<div>
+												<p>Natural de Olinda, Iniciou seus estudos no Conservatório Pernambucano de Musica, tendo aulas de canto erudito com a Profa. Rosimary Carlos. Estudou Piano no Centro Musical de Olinda com a Profa. Dayse Gomes. Desenvolveu atividades como regente de Coro na Igreja Ass de Deus no bairro de Rio Doce. Integrante dos principais Coros de Recife dentre eles, Coro Sinfonico STBNB, Coro de Câmara do Conservatório Pernambucano de Música , Opus 2, Contracantos e também do Grupo Txaimus. Em 2018 participou da II Oficina de Canto Lírico de Recife com os Professores Dr. Marcelo Ferreira e Dr. Vitor Philomeno. Participou como Coristas nas obras: Missa da coroação de Mozart, Missa Nordestina de Clovis Pereira, Te Deum Dvorak, As Três Parábolas de Dierson Torres, Oratório de Noël de Camille Saint-Saëns e Na Ópera Carmen de Georges Bizet com a Academia de Ópera e Repertório. Atualmente, Licenciando em Música pela Universidade Federal de Pernambuco.</p>
 											</div>
 										</div>
 									</li>
@@ -578,7 +591,7 @@
 													<div class="contact">Percussionista</div>
 												</div>
 												<div>
-													<p>	Iniciou seus estudos de música na Banda Comercial de Caruaru-PE com o maestro Normando, estudou Bateria na NOVA MUSIC com o Prof. Jeremias e participou de diversas bandas como baterista na cidade de Caruaru-PE, atualmente toca com a banda LA CAMBADA, a mesma já tem dois CDs gravados. Desenvolve um trabalho de pesquisa com a musicalidade brasileira junto ao grupo Contraventos no qual também atua como percussionista. Também participa do grupo Suíte de Barro do SESC Caruaru-PE tocando bateria percussão e pífano onde participou em junho de 2014 do lançamento do CD Suite de Barro.</p>
+													<p>John Melo, brasileiro, natural de Jaboatão dos Guararapes – PE. Atualmente mora na cidade de Caruaru – PE. Iniciou seus estudos de música na Banda Comercial de Caruaru-PE com o maestro Normando no ano de 2006. Em 2009, estudou bateria na ESCOLA DE MÚSICA CIA GROOVE com o Professor Geremias Ferrati. Fez parte da banda CASAPRIMA, como baterista entre os anos de 2013 a 2016. Participando da gravação do segundo CD chamado: ANDARILHO. Fez parte também do grupo Suíte de Barro do SESC Caruaru-PE tocando bateria, percussão e pífano onde participou, em junho de 2014, do lançamento do CD Suíte de Barro. Em 2017 foi aprovado no Vestibular para o curso superior de Licenciatura em Música no Instituto Federal de Pernambuco IFPE – Campus Belo Jardim. Atualmente integra a Orquestra Pernambucana de Clarinetes – OPEC como percussionista. Participa também do projeto CONTRACANTOS E CONTRAVENTOS da Universidade Federal de Pernambuco.</p>
 												</div>
 											</div>
 										</li>
