--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 						<li><a href="#">PORTFOLIO</a>
 							<ul>
 								<li><a href="portfolio-povo-brasileiro.html">POVO BRASILEIRO: CANTOS DO NORDESTE</a></li>
+								<li><a href="portfolio-cantos-trabalho.html">CANTOS DE TRABALHO</a></li>
 								<!--<li><a href="about-styled.html">STYLED</a></li>
 								<li><a href="about-more.html">MORE</a></li>
 								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
@@ -151,7 +152,7 @@
 						<!-- <a href="" id="slideshow-link" ><span></span></a>-->
 						<!-- slides -->
 						<ul id="slides">
-								<li><a href="portfolio-povo-brasileiro.html"><img src="images/banner-povo-brasileiro-patro.jpg" alt="Imagen" /></a></li>
+								<li><a href="portfolio-povo-brasileiro.html"><img src="images/banner-povo-brasileiro.jpg" alt="Imagen" /></a></li>
                 <li><a href="#1"><img src="images/1.jpg"  alt="Imagen" /></a></li>
                 <li><a href="#2"><img src="images/2.jpg"  alt="Imagen" /></a></li>
                 <li><a href="#3"><img src="images/3.jpg"  alt="Imagen" /></a></li>
